[package]
name = "bingo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-derive = "=7.0.17"
async-graphql-value = "=7.0.17"
async-graphql-parser = "=7.0.17"
linera-sdk = "0.15.7"
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
linera-views = "0.15.7"
linera-base = "0.15.7"
bcs = "0.1.3"
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3"
log = "0.4"



[dev-dependencies]
linera-sdk = { version = "0.15.7", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "bingo_contract"
path = "src/contract.rs"

[[bin]]
name = "bingo_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'