[package]
name = "dots_and_boxes"
version = "0.1.0"
edition = "2021"

[dependencies]
# STRICTLY PIN Linera to 0.15.7 using "=" to prevent auto-upgrade to 0.15.8
linera-sdk = "=0.15.7"
linera-views = "=0.15.7"
linera-base = "=0.15.7"

futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bcs = "0.1.3"

# STRICTLY PIN async-graphql to 7.0.17 to avoid the "let" error
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = "=7.0.17" 

[dev-dependencies]
linera-sdk = { version = "=0.15.7", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "dots_and_boxes_contract"
path = "src/contract.rs"

[[bin]]
name = "dots_and_boxes_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'