[package]
name = "plinko"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.7"
async-graphql-value = "=7.0.17"
async-graphql-parser = "=7.0.17"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
linera-views = "0.15.7"
linera-base = "0.15.7"
bcs = "0.1.3"
pulse_token = { path = "../pulse_token" }

[dev-dependencies]
linera-sdk = { version = "0.15.7", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "plinko_contract"
path = "src/contract.rs"

[[bin]]
name = "plinko_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
