[package]
name = "sports"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linera-views = "0.15.8"
linera-base = "0.15.8"
bcs = "0.1.3"
pulse_token = { path = "../pulse_token" }

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "sports_contract"
path = "src/contract.rs"

[[bin]]
name = "sports_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'